WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163589
[DOMJIT] Not emit exception case if it is not necessary
https://bugs.webkit.org/show_bug.cgi?id=163589
Summary
[DOMJIT] Not emit exception case if it is not necessary
Yusuke Suzuki
Reported
2016-10-18 00:43:41 PDT
We should not emit exception case if it is not necessary. For example, nodeType accessor does not use the slow path calls.
Attachments
Patch
(1.80 KB, patch)
2016-10-18 01:41 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2016-10-18 01:41:50 PDT
Created
attachment 291931
[details]
Patch
Yusuke Suzuki
Comment 2
2016-10-18 09:05:03 PDT
Comment on
attachment 291931
[details]
Patch Thanks!
WebKit Commit Bot
Comment 3
2016-10-18 09:28:59 PDT
Comment on
attachment 291931
[details]
Patch Clearing flags on attachment: 291931 Committed
r207465
: <
http://trac.webkit.org/changeset/207465
>
WebKit Commit Bot
Comment 4
2016-10-18 09:29:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug