[DOMJIT] Not emit exception case if it is not necessary https://bugs.webkit.org/show_bug.cgi?id=163589

Reviewed by Sam Weinig.

We should not emit exception case if we do not use the slow path calls.
For example, nodeType accessor does not use the slow path calls.

* bytecode/PolymorphicAccess.cpp:
(JSC::AccessCase::emitDOMJITGetter):


Canonical link: https://commits.webkit.org/181378@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207465 268f45cc-cd09-0410-ab3c-d52691b4dbfc